  order address with geo zones of tax rates.
- ALL: Support for new roles and permissions to access the web server API.
- ALL: Added logging to execution stage of batch form.
- ALL: Make "property specification not found" a debug level message.
- JOO: Access rights revisited so that menu-items remain visible in the admin
  menu for people who only have access to the batch send form.
Bugs:
- WC3: Since WC3, the shipping tax class can be "inherited" from the product
  items (which should be the preferred value for this setting). The plugin did
  not handle this value correctly.
- WC3: Code to get the vat rate lookup meta data did not use customer location
  and would therefore be based on shop location.
- WC3: Code to improve precision of shipping costs ex vat ignores zone based
  shipping method settings of WC3.
- ALL: Warning: implode(): Invalid arguments passed in Completor.php on line 835.
- ALL: module specific translations were not loaded on case sensitive systems
  (e.g. linux).
- ALL: Warning 511: Incorrect vattype value used (false) in vattype tag as part
  of invoice section in the XML. Using default value of 1(national, regular
  invoice). (CE005BVTC)
- ALL: Message 'message_warning_no_vattype_must_split' was not translated.
- OC: Breadcrumb on settings page was incorrect.

5.4.9 (2018-10-03)
------------------
Features:
- JOO: Add access right to config, advanced config and batch screens.
Bugs:
- JOO: Install/update: Call to a member function getAcumulusConfig() on boolean.
- JOO: Install: File does not exist .../com_acumulus/admin/language/en-GB.com_acumulus.ini

5.4.8 (2018-08-27)
------------------
Bugs:
- OC: SplitLine strategy was removed as having no usages: it turns out that
  OpenCart coupons need it.
- ALL: Error in assigning strategy to the vatrate-source tag in
  CompletorInvoiceLines::addVatRateToLookupLines.
- ALL: Error in initializing possible vat types.
- ALL: Empty country code now handled as NL.